# bwos

./: .gitignore
aarch64/: Cargo.toml
aarch64/src/: asm.rs  lib.rs  macros.rs  sp.rs
bootloader/: Cargo.toml
bootloader/src/: main.rs
kernel/: Cargo.toml  Makefile  qemu.sh
kernel/.cargo/: config  layout.ld
kernel/src/: allocator.rs  console.rs  framebuffer.rs  homer.rs  init.rs  main.rs  mutex.rs  shell.rs  videocore.rs
kernel/src/allocator/: bin.rs  bump.rs
kernel/src/hdmi_framebuffer/: font.rs  freebsd_cp850.rs  freebsd_teletext.rs  mod.rs
kernel/src/init/: init.s  panic.rs
pi/: Cargo.toml
pi/src/: framebuffer.rs  gpio.rs  hdmi_framebuffer.rs  homer.rs  lib.rs  local_interrupt.rs  rng.rs  uart.rs  videocore_mailbox.rs
pi/src/atags/: raw.rs
pi/src/font/: charset.rs  freebsd_cp850.rs  freebsd_teletext.rs  mod.rs
shim/: Cargo.toml
shim/src/: no_std.rs
stack-vec/: Cargo.toml
stack-vec/src/: lib.rs
ttywrite/: Cargo.toml  test.sh
volatile/: Cargo.toml
xmodem/: Cargo.toml
