[package]
name = "shim"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>",
    "Brent Bettis <brent.bettis@gmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1"
bare-io = { version = "0.2.1", optional = true, default-features = false }

[dev-dependencies]
hashbrown = "0.6.3"

[features]
no_std = ["bare-io/nightly"]
alloc = ["bare-io/nightly"]
